--- a/siteEPIs/epis/templates/avisos.html
+++ b/siteEPIs/epis/templates/avisos.html
@@ -16,8 +16,9 @@
     <main>
         <h2 class="page-title">Avisos e Relatórios</h2>
 
-        <div class="alert alert-info">
+        <div class="alert alert-info" style="text-align: center;">
             <p>Esta página está em elaboração. Novas funcionalidades serão adicionadas em breve.</p>
+            <hr style="width: 50%; margin: 10px auto;">
         </div>
 
         <div id="relatorios" class="form-container">
