--- a/siteEPIs/epis/templates/index.html
+++ b/siteEPIs/epis/templates/index.html
@@ -1,11 +1,11 @@
 {% load static %}
+{% include "partials/header.html" %}
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Gerenciamento de EPIs</title>
-   
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -68,17 +68,6 @@
     </style>
 </head>
 <body>
-    <header class="top-bar">
-        <h1 class="site-title">Sistema de Gerenciamento de EPIs</h1>
-        <nav class="menu">
-            <a href="/">Home</a>
-            <a href="/colaboradores">Gerenciamento de Colaboradores</a>
-            <a href="/epis">Gerenciamento de EPIs</a>
-            <a href="/entrega">Registro de Entrega de EPIs</a>
-            <a href="/avisos">Avisos</a>
-        </nav>
-    </header>
-
     <main>
         <section class="welcome-section">
             <h2>Bem-vindo ao Sistema de Gerenciamento de EPIs</h2>
