--- a/siteEPIs/epis/templates/editar_colb.html
+++ b/siteEPIs/epis/templates/editar_colb.html
@@ -1,23 +1,33 @@
+{% include "partials/header.html" %}
 <!DOCTYPE html>
 <html lang="pt-BR">
-{% include "partials/header.html" %}
 <head>
     <style>
         body {
-                       justify-content: center; /* Alinha horizontalmente ao centro */
-            margin: 0; /* Remove margem padrão do body */
-        }
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 0;
+            min-height: 100vh;
+            }
 
-        #lista-colaboradores {
-            max-width: 800px; /* Define uma largura máxima para o contêiner */
-            width: 100%; /* Faz o contêiner ocupar 100% da largura disponível */
-            margin: 20px; /* Adiciona margem em torno do contêiner */
-            padding: 20px; /* Adiciona preenchimento interno ao contêiner */
-            border: 1px solid #ccc; /* Opcional: borda ao redor do contêiner */
-            border-radius: 5px; /* Opcional: bordas arredondadas */
-            background-color: #fff; /* Opcional: cor de fundo */
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Opcional: sombra para destaque */
-        }
+            main {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+                }
+
+            #lista-colaboradores {
+                    max-width: 800px;
+                    width: 100%;
+                    margin: 20px auto;
+                    padding: 20px;
+                    border: 1px solid #ccc;
+                    border-radius: 5px;
+                    background-color: #fff;
+                    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+                                }
 
         table {
             width: 100%; /* Faz a tabela ocupar toda a largura do contêiner */
@@ -34,6 +44,11 @@
         th {
             background-color: #f4f4f4; /* Altera a cor de fundo do cabeçalho */
         }
+
+        .page-title {
+         text-align: center;
+              }
+
     </style>
 </head>
 <body>
